Migrate to Tailwind CSS v4 + shadcn/ui
Replace plain CSS with Tailwind utilities and shadcn components (Button,
Card, Input, Tabs, AlertDialog, Dialog, Combobox). Preserve 3-theme
system (light/dark/queen) via CSS custom properties mapped to shadcn
variable naming. Switch icons from react-icons to lucide-react, upgrade
exercise picker to Combobox, replace window.prompt with Dialog.

Also fixes: calendar grid overflow (dynamic row count), serviceWorker.ready
hang in dev (use getRegistration), end-workout success message, and
favicon/PWA icon reference updated from SVG to PNG.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/venzensmalllogo.svg" />
+    <link rel="icon" type="image/png" href="/venzensmalllogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Venzen Gym Log</title>
   </head>
